# tidalauth

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
tidalauth/: __main__.py  engine.py  settings.py  utils.py
